Fix VR wrist devices alignment

--- a/html/src/vr.scss
+++ b/html/src/vr.scss
@@ -195,7 +195,6 @@ button {
 }
 
 .x-containerbottom span {
-    padding: 3px 0;
     display: block;
     overflow: hidden;
 }
@@ -221,6 +220,7 @@ button {
     display: flex;
     align-items: center;
     font-size: 18px;
+    height: 27.1px;
 }
 
 .x-friend-item .time {
